--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.20",
         "axios": "^0.25",
+        "daisyui": "^4.12.22",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.16"
+    },
+    "name": "web-todolist",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\"></a></p>",
+    "main": "webpack.mix.js",
+    "directories": {
+        "test": "tests"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
